# aiohttp-7664

./: .gitignore  .mypy.ini  Makefile  pyproject.toml  setup.py
.github/workflows/: ci-cd.yml  post-dependabot.yml
aiohttp/: http_exceptions.py  http_parser.py
docs/: contributing.rst  deployment.rst  index.rst  testing.rst  web_advanced.rst
tests/: test_circular_imports.py  test_cve_2025_69223_vendored_brotli.py  test_http_parser.py
tests/autobahn/: Dockerfile.aiohttp
